move scss files and add build script

--- a/scss/bs-companion.scss
+++ b/scss/bs-companion.scss
@@ -1,10 +1,10 @@
-@import "../../node_modules/bootstrap/scss/functions";
-@import "../../node_modules/bootstrap/scss/variables";
+@import "bootstrap/scss/functions";
+@import "bootstrap/scss/variables";
 
 // Optional Sass map overrides here
 
-@import "../../node_modules/bootstrap/scss/maps";
-@import "../../node_modules/bootstrap/scss/mixins";
+@import "bootstrap/scss/maps";
+@import "bootstrap/scss/mixins";
 
 @import "form-validator.scss";
 @import "modalizer.scss";
