--- a/scss/bs-companion.scss
+++ b/scss/bs-companion.scss
@@ -14,6 +14,12 @@
   --bs-toast-max-width: min(90vw, 320px);
 }
 
+// Don't hide since we remove them from the dom anyway
+// Allow proper hide animation
+.toast.toaster:not(.show) {
+  display: block !important;
+}
+
 // Fix subpixel rounding for tabs when zooming
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link.active {
