--- a/scss/bs-companion.scss
+++ b/scss/bs-companion.scss
@@ -14,20 +14,27 @@
   --bs-toast-max-width: min(90vw, 320px);
 }
 
-// Don't hide since we remove them from the dom anyway
-// Allow proper hide animation
-.toast.toaster:not(.show) {
-  display: block !important;
-}
+.toast.toaster {
+  // Don't hide since we remove them from the dom anyway
+  // Allow proper hide animation
+  &:not(.show) {
+    display: block !important;
+  }
 
-// Prevent header styling issue
-.toast.toaster .toast-header {
-  color: unset;
-  background-color: rgba(0, 0, 0, 0.05);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
-}
-.toast.toaster .bg-opacity-10 .toast-header {
-  background-color: rgba(255,255,255,0.5);
+  // Prevent header styling issue
+  .toast-header {
+    color: unset;
+    background-color: rgba(0, 0, 0, 0.05);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+  }
+  .bg-opacity-10 .toast-header {
+    background-color: rgba(255, 255, 255, 0.5);
+  }
+
+  // Links shouldn't get a strange color
+  .text-white a {
+    color: $white;
+  }
 }
 
 // Fix subpixel rounding for tabs when zooming
