--- a/scss/bs-companion.scss
+++ b/scss/bs-companion.scss
@@ -1,5 +1,6 @@
 @import "bootstrap/scss/functions";
 @import "bootstrap/scss/variables";
+@import "bootstrap/scss/variables-dark";
 
 // Optional Sass map overrides here
 
