add progress indeterminate

--- a/scss/bs-companion.scss
+++ b/scss/bs-companion.scss
@@ -9,84 +9,7 @@
 
 @import "form-validator.scss";
 @import "modalizer.scss";
-
-// Prevent issue on small screen
-.toast {
-  --bs-toast-max-width: min(90vw, 320px);
-}
-
-.toast.toaster {
-  // Don't hide since we remove them from the dom anyway
-  // Allow proper hide animation
-  &:not(.show) {
-    display: block !important;
-  }
-
-  // Prevent header styling issue
-  .toast-header {
-    color: unset;
-    background-color: rgba(0, 0, 0, 0.05);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.125);
-  }
-  .bg-opacity-10 .toast-header {
-    background-color: rgba(255, 255, 255, 0.5);
-  }
-
-  // Links shouldn't get a strange color
-  .text-white a {
-    color: $white;
-  }
-}
-
-// Fix subpixel rounding for tabs when zooming
-.nav-tabs .nav-item.show .nav-link,
-.nav-tabs .nav-link.active {
-  border-bottom-width: 1.5px;
-  margin-bottom: calc(-1 * var(--bs-nav-tabs-border-width) - 0.5px);
-}
-
-// Avoid FOUC
-responsive-table,
-bs-tabs {
-  // This gets overriden in js
-  &:not(:defined) {
-    visibility: hidden;
-  }
-}
-
-bs-tabs {
-  position: relative;
-  display: flex;
-  // It needs all available space to compute width
-  flex-grow: 1;
-
-  // Align to the end of line
-  &[end] {
-    justify-content: flex-end;
-  }
-
-  // Style applied when nav is collapsed to a dropdown menu
-  &.bs-tabs-dropdown {
-    .nav-link.active {
-      @include caret();
-      // min-width: calc(var(--min-width) + 20px);
-    }
-    .nav-link:not(.active) {
-      display: none;
-    }
-  }
-}
-
-responsive-table {
-  // Without this, it will only hide columns if header is too large
-  td,
-  th {
-    white-space: nowrap;
-    text-overflow: ellipsis;
-  }
-
-  // @link https://stackoverflow.com/questions/71674803/html-tables-has-a-weird-bold-horizontal-line-due-to-border-collapse-property/71703247#71703247
-  &.fix-borders .table > :not(caption) > * > * {
-    border-bottom-width: 0.1px;
-  }
-}
+@import "progress-indeterminate.scss";
+@import "toasts.scss";
+@import "bs-tabs.scss";
+@import "responsive-table.scss";
