--- a/scss/bs-companion.scss
+++ b/scss/bs-companion.scss
@@ -9,7 +9,7 @@
 
 @import "form-validator.scss";
 @import "modalizer.scss";
-@import "progress-indeterminate.scss";
+@import "bs-progress.scss";
 @import "toasts.scss";
 @import "bs-tabs.scss";
 @import "responsive-table.scss";
